--- a/iTahDoodle/Base.lproj/Main.storyboard
+++ b/iTahDoodle/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iTahDoodle" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,46 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fah-yY-rlN">
+                                <rect key="frame" x="335" y="28" width="40" height="30"/>
+                                <state key="normal" title="Insert"/>
+                                <connections>
+                                    <action selector="addButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ht2-37-jrb"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To-Do Items" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kVN-cQ-GXz">
+                                <rect key="frame" x="16" y="28" width="311" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4LW-9R-MnP">
+                                <rect key="frame" x="16" y="66" width="343" height="581"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kVN-cQ-GXz" firstAttribute="baseline" secondItem="fah-yY-rlN" secondAttribute="baseline" constant="-1" id="7gy-8C-zl6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4LW-9R-MnP" secondAttribute="trailing" id="CZP-f8-mhV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fah-yY-rlN" secondAttribute="trailing" constant="-16" id="N3i-l0-EwM"/>
+                            <constraint firstItem="4LW-9R-MnP" firstAttribute="top" secondItem="kVN-cQ-GXz" secondAttribute="bottom" constant="8" id="Qmt-vF-NF7"/>
+                            <constraint firstItem="fah-yY-rlN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="S7v-xP-sOt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4LW-9R-MnP" secondAttribute="bottom" constant="20" id="Sm1-GT-19y"/>
+                            <constraint firstItem="fah-yY-rlN" firstAttribute="leading" secondItem="kVN-cQ-GXz" secondAttribute="trailing" constant="8" id="dhu-vB-0g8"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="kVN-cQ-GXz" secondAttribute="leading" id="iBh-dQ-fHh"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="4LW-9R-MnP" secondAttribute="leading" id="qxe-TN-M2B"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="itemTextField" destination="kVN-cQ-GXz" id="Rmw-xZ-Q8k"/>
+                        <outlet property="tableView" destination="4LW-9R-MnP" id="RbC-tL-Rnh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
